--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,7 @@
             android:name=".MonthCalendar"
             android:label="@string/title_activity_month_calendar"
             android:parentActivityName=".WeekCalendar"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".RecipeBook"
             android:label="@string/title_activity_recipe_book"
@@ -49,15 +48,20 @@
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-
             </intent-filter>
-
         </activity>
         <activity
             android:name=".basicActivity"
             android:label="@string/title_activity_basic"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".AddFoodRecipe"
+            android:label="@string/title_activity_add_food_recipe"
+            android:parentActivityName=".RecipeBook"
             android:theme="@style/AppTheme.NoActionBar">
-
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.mmeh.peal.RecipeBook" />
         </activity>
     </application>
 
