--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,37 +12,51 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MonthCalendar"
+            android:configChanges="orientation"
             android:label="@string/title_activity_month_calendar"
             android:parentActivityName=".WeekCalendar"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".RecipeBook"
+            android:configChanges="orientation"
             android:label="@string/title_activity_recipe_book"
             android:parentActivityName=".WeekCalendar"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".DayView"
+            android:configChanges="orientation"
             android:label="@string/title_activity_day_view"
             android:parentActivityName=".WeekCalendar"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".MealView"
+            android:configChanges="orientation"
             android:label="@string/title_activity_meal_view"
             android:parentActivityName=".DayView"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".AddFoodItems"
+            android:configChanges="orientation"
             android:label="@string/title_activity_add_food_items"
             android:parentActivityName=".MealView"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ShoppingList"
+            android:configChanges="orientation"
             android:label="@string/title_activity_shopping_list"
             android:parentActivityName=".WeekCalendar"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".WeekCalendar"
-            android:label="@string/title_activity_week_calendar"
+            android:configChanges="orientation"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -52,12 +66,16 @@
         </activity>
         <activity
             android:name=".basicActivity"
+            android:configChanges="orientation"
             android:label="@string/title_activity_basic"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".AddFoodRecipe"
+            android:configChanges="orientation"
             android:label="@string/title_activity_add_food_recipe"
             android:parentActivityName=".RecipeBook"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
